# pegasus

./: .gitignore  AGENTS.md  README.md  dev.sh  pitch.html  sync.sh
.claude/agents/: dhruva-signals.md  imessage-bridge.md  jason-backend.md  rishith-ml.md  wesley-frontend.md
backend/: .env.example  .gitignore  AGENTS.md  config.py  crud.py  db.py  main.py  orchestrator.py  requirements.txt  safety.py  schemas.py  stimuli.py
backend/models/: database.py  score_record.py  session.py  user.py  video_record.py
backend/routes/: brain.py  history.py  metrics.py  response.py  score.py  stimulus.py  video.py
console/: server.py
face-emotion-api/: README.md  api.py  pyproject.toml  requirements.txt
face-emotion-api/face_emotion/: __init__.py  detector.py  fusion.py
frontend/: AGENTS.md  App.tsx  app.json  babel.config.js  index.html  metro.config.js  package-lock.json  package.json  vite.config.js
imessage/: .env.example  AGENTS.md  README.md  bridge.py  imessage.py  registry.py  requirements.txt  send.applescript
ml/: .env.example  AGENTS.md  chat.py  claude_interpreter.py  combined_scorer.py  intervention.py  main.py  rag_intervention.py  requirements.txt  scoring.py  tribe.py  tribe_client.py  tribe_inference.py
scripts/: pegasus-up.sh
shared/: AGENTS.md  contract.json  contract.md  contract.py  stimuli.json
signals/: .env.example  AGENTS.md  alerts.py  collector.js  main.py  requirements.txt  sentiment.py
video/: .env.example  AGENTS.md  README.md  facial_analyzer.py  facial_hf.py  main.py  requirements.txt  tts.py  voice_analyzer.py
(+84 files in other folders)
